fix a runtime error