@@ -1,4 +1,9 @@
-package jsonformat
+// Copyright: 2010 - 2018 Sam Halliday
+// License: http://www.gnu.org/licenses/lgpl-3.0.en.html
+
+// Copyright 2018 Andriy Plokhotnyuk
+
+package jsonformat.benchmarks
 
 import java.util.concurrent.TimeUnit
 
@@ -7,6 +12,7 @@ import io.circe.{ Error, Printer }
 import io.circe.generic.auto._
 import io.circe.parser._
 import io.circe.syntax._
+import jsonformat._
 import jsonformat.JsDecoder.ops._
 import jsonformat.JsEncoder.ops._
 import scalaz._, Scalaz._
@@ -18,10 +24,10 @@ import scalaz._, Scalaz._
 // see org.openjdk.jmh.runner.options.CommandLineOptions
 
 @deriving(Equal, Show, JsEncoder, JsDecoder)
-case class Nested(n: Option[Nested])
+final case class Nested(n: Option[Nested])
 
 @deriving(Equal, Show)
-case class Nested2(n: Option[Nested2])
+final case class Nested2(n: Option[Nested2])
 
 object Nested2 {
   implicit val customEncoder: JsEncoder[Nested2] = { o =>
@@ -49,15 +55,10 @@ object Nested2 {
 @jmh.annotations.Fork(
   value = 1,
   jvmArgs = Array(
-    "-server",
+    "-Xss2m",
     "-Xms2g",
     "-Xmx2g",
-    "-XX:NewSize=1g",
-    "-XX:MaxNewSize=1g",
-    "-XX:InitialCodeCacheSize=512m",
-    "-XX:ReservedCodeCacheSize=512m",
-    "-XX:+UseParallelGC",
-    "-XX:-UseBiasedLocking",
+    "-XX:+UseG1GC",
     "-XX:+AlwaysPreTouch"
   )
 )
@@ -93,8 +94,7 @@ class SyntheticBenchmarks {
     require(readScalazDeriving().getOrElse(null) == obj)
     require(writeCirce() == jsonString)
     require(writeScalazCustom() == jsonString)
-    // FIXME: java.lang.NoSuchMethodError: jsonformat.Nested$._deriving_jsencoder()Ljsonformat/JsEncoder;
-    //require(writeScalazDeriving() == jsonString)
+    require(writeScalazDeriving() == jsonString)
   }
 
   @jmh.annotations.Benchmark
@@ -138,8 +138,6 @@ class SyntheticBenchmarks {
   @jmh.annotations.Benchmark
   def writeScalazCustom(): String = CompactPrinter(obj2.toJson)
 
-/* FIXME: java.lang.NoSuchMethodError: jsonformat.Nested$._deriving_jsencoder()Ljsonformat/JsEncoder;
   @jmh.annotations.Benchmark
   def writeScalazDeriving(): String = CompactPrinter(obj.toJson)
-*/
 }
